--- a/kalai-sergiu/tema-2/styles.css
+++ b/kalai-sergiu/tema-2/styles.css
@@ -11,8 +11,8 @@ body{
 
     box-sizing: border-box;
     border-color:maroon;
-    box-shadow: 1px 3px 4px darkmagenta;
-    border: 1px solid;
+    box-shadow: 0 4px 8px rgba(56, 45, 212, 0.5);
+    border: 2px solid;
     box-align: center;
     display: block;
     width: 370px;
@@ -21,6 +21,7 @@ body{
     margin-top: 100;
     padding-top: 20px;
     padding-left: 75px;
+    text-decoration-color: blue;
 }
 /*Email input*/
 .user{
@@ -132,7 +133,12 @@ body{
     font-family: 'Noto Sans JP';
 }
 .button{
-    margin-top: 10px;
-    margin: 50px;
-    padding-left: 10px;
+box-sizing: border-box;
+margin-top: 20px;
+width: 60%;
+height: 20px;
+border: 1px solid rgb(56, 56, 170);
+background-color: rgb(56, 56, 170);
+text-align: center;
+
 }
