--- a/kalai-sergiu/tema-3/styles.css
+++ b/kalai-sergiu/tema-3/styles.css
@@ -14,7 +14,10 @@
     bottom: 0;
     background-color: blue;
     color: black;   
-    margin:1px:
+    margin:1px;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-content: flex-end;
 }
 .box2{
     width: 200px;
@@ -39,6 +42,7 @@
     height: 60vh;
     top: 0;
     bottom: 0;
+    
     background-color: yellow;
     color: black;   
     flex-direction:row-reverse;
