--- a/kalai-sergiu/tema-4/medium challenge/style.css
+++ b/kalai-sergiu/tema-4/medium challenge/style.css
@@ -12,54 +12,36 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     border: 2px solid #ffffff;
-    box-shadow: 12px 12px 12px rgba(0, 0, 0, 0.6);
+    box-shadow: 12px 12px 12px rgba(131, 4, 4, 0.9);
     overflow: hidden;
     border-radius: 50%;
     background-color: lightskyblue;
+    
 }
 .heart {
     position: relative;
     top: 100px;
     left: 90px;
-    animation: animate 1s linear infinite;
+    animation: animate 0.7s ease-in-out infinite;
+    perspective;
 }
-.heart:before {
-    content: '';
-    width: 110%;
-    height: 100%;
-    position: absolute;
-    transform: scale(1);
-}
-.heart:after{
-    content: '';
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    transform: scale(2);
-}
+
 
 @keyframes animate
 {
     0%{
         transform:  scale(1);
     }
-    20%{
-        transform:  scale(1.2);
+    25%{
+        transform: scale(1.2);
     }
-    40%{
+    50%%{
         transform:  scale(1);
     }
-    60%{
-        transform:  scale(1.2);
-    }
-    80%{
-        transform:  scale(1);
-    }
-    90%{
-        transform:  scale(1.2);
+    75%{
+        transform: scale(1.2);
     }
     100%{
-        transform:  scale(1);
+        transform: scale(1);
     }
 }
-
