--- a/kalai-sergiu/tema-3/styles.css
+++ b/kalai-sergiu/tema-3/styles.css
@@ -1,60 +1,29 @@
-.container{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    height:60vh;
-    justify-content: space-between;
-}
-.box1{
-    width: 200px;
-    height: 60vh;
-    margin: 0px;
-    top:0;
-    bottom: 0;
-    background-color: blue;
-    color: black;   
-    margin:1px;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-content: flex-end;
-}
-.box2{
-    width: 200px;
-    height: 60vh;
-    margin: 0px;
-    top:0;
-    bottom: 0;
-    background-color: red;
-    color: black;   
-}
-.box3{
-    width: 200px;
-    height: 60vh;
-    margin: 0px;
-    top:0;
-    bottom: 0;
-    background-color: coral;
-    color: black;   
-}
-.box4{
-    width: 200px;
-    height: 60vh;
+.body{
+    display: grid;
+    margin: 0 ;
+    padding: 0;
     top: 0;
     bottom: 0;
-    
-    background-color: yellow;
-    color: black;   
-    flex-direction:row-reverse;
-    justify-content:center;
-    align-items: flex-start;
+    justify-content: space-between;
 }
-.box5{
-    width: 200px;
-    height: 60vh;
-    top:0;
-    bottom: 0;
-    flex-direction:row-reverse;
-    justify-content:center;
-    align-items: flex-start; 
+
+header{
+    position: absolute;
+    align-items: flex-start;
+    width: 100%;
+    height: 100px;
+    background-color: red;
+}
+footer{
+    position: relative;
+    align-items: flex-end;
+    width: 100%;
+    height: 100px;
+    background-color: royalblue;
+    top: 100%;
+    transform: translate(100%);
+    overflow: hidden;
+}
+footer:focus{
+    transform: translate(-100%);
 }
